--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,52 +6,133 @@
 fail_fast: false
 
 repos:
+
+  #
+  # Python
+  #
+
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: 1f6de3d70391131fac4b911ae913c568e571e34e
     hooks:
       - id: trailing-whitespace
         exclude: \.output
-#      - id: end-of-file-fixer
-#        exclude: \.(cp?p?$|output)
+      - id: end-of-file-fixer
+        exclude: \.(cp?p?$|output)
       - id: check-docstring-first
       - id: check-added-large-files
       - id: check-yaml
       - id: debug-statements
       - id: requirements-txt-fixer
+
+  - repo: https://github.com/pycqa/pylint
+    rev: ""  # pylint-2.14.5
+    hooks:
+      - id: pylint
+        args: ["-rn", "-sn", "--rcfile=knp/.pylintrc", "--fail-on=I"]
+        exclude: tests(/\w*)*/functional/|tests/input|tests(/\w*)*data/|doc/
+      - id: pylint
+        alias: pylint-with-spelling
+        args: ["-rn", "-sn", "--rcfile=knp/.pylintrc", "--fail-on=I", "--spelling-dict=en,ru"]
+        exclude: tests(/\w*)*/functional/|tests/input|tests(/\w*)*data/|doc/
+        stages: [manual]
+
+  - repo: https://github.com/PyCQA/flake8
+    rev: 6.0.0
+    hooks:
+      - id: flake8
+        args: ["--config", "knp/.flake8"]
+        additional_dependencies:
+          [flake8-bugbear==22.12.6, flake8-typing-imports==1.14.0]
+        exclude: ".*fixtures"
+
   - repo: https://github.com/asottile/reorder_python_imports
     rev: bc7b5b2f0fde191c9d0121588ef9bbb79f8e5e21
     hooks:
       - id: reorder-python-imports
         language_version: python3
+
   - repo: https://github.com/pre-commit/pre-commit
     rev: v2.16.0
     hooks:
-    -   id: validate_manifest
+      - id: validate_manifest
+  - repo: https://github.com/pre-commit/mirrors-mypy
+    rev: v0.991
+    hooks:
+      - id: mypy
+        name: mypy
+        entry: mypy
+        language: python
+        types: [python]
+        args: [--no-strict-optional, --ignore-missing-imports]
+        require_serial: true
+        additional_dependencies:
+          [
+            "isort>=5",
+            "platformdirs==2.2.0",
+            "py==1.11",
+            "tokenize-rt==3.2.0",
+            "tomlkit>=0.10.1",
+            "types-pkg_resources==0.1.3",
+            "types-dataclasses >= 0.1.3",
+            "types-PyYAML",
+            "types-typed-ast >= 1.4.1"
+          ]
+        exclude: tests(/\w*)*/functional/|tests/input|tests(/.*)+/conftest.py|doc/data/messages|tests(/\w*)*data/
+
   - repo: https://github.com/asottile/pyupgrade
     rev: v1.16.1
     hooks:
       - id: pyupgrade
-#  - repo: https://github.com/ambv/black
-#    rev: cea13f498418784e22f8fbd78db3f9240a2bad11
-#    hooks:
-#      - id: black
-#        args: ["-l", "120"]
-  - repo: local
+
+  - repo: https://github.com/ambv/black
+    rev: ""
+    hooks:
+      - id: black
+        args: ["-l", "120", "--skip-string-normalization"]
+
+  - repo: https://github.com/PyCQA/bandit
+    rev: 1.7.4
+    hooks:
+      - id: bandit
+        args: ["-r", "-lll"]
+        exclude: ".*fixtures"
+
+  #
+  # C++
+  #
+
+  - repo: https://github.com/pocc/pre-commit-hooks
+    rev: ""
     hooks:
       - id: clang-format
-        name: clang-format
         args: ["--style=file"]
-        entry: tools/hooks/clang_format.py
-        description: Formats C, C++, Objective-C, and Java code
-        types_or: [c, c++, c#, objective-c, java]
-        language: python
       - id: clang-tidy
-        name: clang-tidy
         args: ["--config-file=knp/.clang-tidy"]
-        entry: tools/hooks/clang_tidy.py
-        description: Find warnings/errors in C, C++, and Objective-C code
-        types_or: [c, c++, c#, objective-c]
-        language: python
+      # - id: oclint
+      # - id: uncrustify
+      - id: cppcheck
+      - id: cpplint
+        args: ["--root", "knp"]
+        additional_dependencies:
+          [cpplint==1.6.1]
+      # - id: include-what-you-use
+
+  - repo: local
+    hooks:
+#      - id: clang-format
+#        name: clang-format
+#        args: ["--style=file"]
+#        entry: tools/hooks/clang_format.py
+#        description: Formats C, C++, Objective-C, and Java code
+#        types_or: [c, c++, c#, objective-c, java]
+#        language: python
+#      - id: clang-tidy
+#        name: clang-tidy
+#        args: ["--config-file=knp/.clang-tidy"]
+#        entry: tools/hooks/clang_tidy.py
+#        description: Find warnings/errors in C, C++, and Objective-C code
+#        types_or: [c, c++, c#, objective-c]
+#        language: python
 #      - id: oclint
 #        name: oclint
 #        entry: tools/hooks/oclint.py
@@ -65,25 +146,33 @@ repos:
       #  # D, vala currently aren't valid file types. See https://github.com/pre-commit/identify/issues/258
       #  types_or: [c, c++, c#, objective-c, java]
       #  language: python
-      - id: cppcheck
-        name: cppcheck
-        entry: tools/hooks/cppcheck.py
-        description: Find warnings/errors in C, C++, and Objective-C code
-        types_or: [c, c++, c#, objective-c]
-        language: python
-      - id: cpplint
-        name: cpplint
-        entry: tools/hooks/cpplint.py
-        args: ["--root", "knp"]
-        description: Find warnings/errors in C/CPP code
-        types_or:  [c, c++, c#, objective-c, cuda]
-        language: python
+#      - id: cppcheck
+#        name: cppcheck
+#        entry: tools/hooks/cppcheck.py
+#        description: Find warnings/errors in C, C++, and Objective-C code
+#        types_or: [c, c++, c#, objective-c]
+#        language: python
+#      - id: cpplint
+#        name: cpplint
+#        entry: tools/hooks/cpplint.py
+#        args: ["--root", "knp"]
+#        additional_dependencies:
+#          [cpplint==1.6.1]
+#        description: Find warnings/errors in C/CPP code
+#        types_or:  [c, c++, c#, objective-c, cuda]
+#        language: python
 #      - id: include-what-you-use
 #        name: include-what-you-use
 #        entry: tools/hooks/include_what_you_use.py
 #        description: Runs Include-What-You-Use (iwyu) in C/CPP code
 #        types_or:  [c, c++, c#, objective-c, cuda]
 #        language: python
+      - id: cccc
+        name: cccc
+        entry: tools/hooks/cccc.py
+        description: Code counter for C and C++
+        types_or:  [c, c++, c#, objective-c, cuda]
+        language: python
 #
 #      - id: tests
 #        name: tests
