--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -67,6 +67,7 @@ repos:
     rev: v2.16.0
     hooks:
       - id: validate_manifest
+
   - repo: https://github.com/pre-commit/mirrors-mypy
     rev: v0.991
     hooks:
@@ -101,6 +102,14 @@ repos:
     hooks:
       - id: black
         args: ["-l", "120", "--skip-string-normalization"]
+
+  - repo: https://github.com/DanielNoord/pydocstringformatter
+    rev: v0.7.2
+    hooks:
+      - id: pydocstringformatter
+        exclude: *fixtures
+        args: ["--max-summary-lines=2", "--linewrap-full-docstring"]
+        files: "pylint"
 
   - repo: https://github.com/PyCQA/bandit
     rev: 1.7.4
