--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,13 +6,44 @@
 fail_fast: false
 
 repos:
+  #
+  # Common
+  #
+  - repo: https://github.com/pre-commit/pre-commit-hooks
+    rev: "v4.4.0"
+    hooks:
+      - id: check-case-conflict
+      - id: trailing-whitespace
+        exclude: \.output
+      - id: end-of-file-fixer
+        exclude: \.(cp?p?$|output)
+      - id: check-added-large-files
+      - id: check-executables-have-shebangs
+      - id: check-shebang-scripts-are-executable
+      - id: check-yaml
+      - id: check-toml
+  #
+  # Git.
+  #
+
+  - repo: https://github.com/pre-commit/pre-commit-hooks
+    rev: "v4.4.0"
+    hooks:
+      - id: check-merge-conflict
+      # - id: no-commit-to-branch
+
+  - repo: https://github.com/alessandrojcm/commitlint-pre-commit-hook
+    rev: "v9.3.0"
+    hooks:
+      - id: commitlint
+        stages: [commit-msg]
 
   #
   # C++
   #
 
   - repo: https://github.com/pocc/pre-commit-hooks
-    rev: ""
+    rev: "v1.3.5"
     hooks:
       - id: clang-format
         args: ["--style=file"]
@@ -96,7 +127,7 @@ repos:
   #
 
   - repo: https://github.com/cheshirekow/cmake-format-precommit
-    rev: ""
+    rev: "v0.6.13"
     hooks:
       - id: cmake-format
         args: ["--config", "knp/.cmake-format.yaml"]
@@ -108,16 +139,10 @@ repos:
   #
 
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: 1f6de3d70391131fac4b911ae913c568e571e34e
+    rev: "v4.4.0"
     hooks:
-      - id: trailing-whitespace
-        exclude: \.output
-      - id: end-of-file-fixer
-        exclude: \.(cp?p?$|output)
-      - id: check-docstring-first
-      - id: check-added-large-files
-      - id: check-yaml
       - id: debug-statements
+      - id: check-docstring-first
       - id: requirements-txt-fixer
 
   - repo: https://github.com/PyCQA/autoflake
@@ -133,7 +158,7 @@ repos:
           - --remove-unused-variables
 
   - repo: https://github.com/pycqa/pylint
-    rev: ""  # pylint-2.14.5
+    rev: "v2.15.9"  # pylint-2.14.5
     hooks:
       - id: pylint
         args: ["-rn", "-sn", "--rcfile=knp/.pylintrc", "--fail-on=I", "--load-plugins=pylint.extensions.docparams"]
@@ -160,7 +185,7 @@ repos:
   #      language_version: python3
 
   - repo: https://github.com/pre-commit/pre-commit
-    rev: v2.16.0
+    rev: v2.20.0
     hooks:
       - id: validate_manifest
 
@@ -189,12 +214,12 @@ repos:
         exclude: tests(/\w*)*/functional/|tests/input|tests(/.*)+/conftest.py|doc/data/messages|tests(/\w*)*data/
 
   - repo: https://github.com/asottile/pyupgrade
-    rev: v1.16.1
+    rev: v3.3.1
     hooks:
       - id: pyupgrade
 
   - repo: https://github.com/ambv/black
-    rev: ""
+    rev: "22.12.0"
     hooks:
       - id: black
         args: ["-l", "120", "--skip-string-normalization"]
@@ -236,6 +261,6 @@ repos:
   #
 
   - repo: https://github.com/markdownlint/markdownlint
-    rev: ""
+    rev: "v0.12.0"
     hooks:
       - id: markdownlint
