--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -33,7 +33,7 @@ repos:
       # - id: no-commit-to-branch
 
   - repo: https://github.com/jorisroovers/gitlint
-    rev: ""
+    rev: "v0.18.0"
     hooks:
       - id: gitlint
 
