Git hooks: cloc added, cccc and command.py fixed, pylint configured

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -106,6 +106,12 @@ repos:
 #        description: Runs Include-What-You-Use (iwyu) in C/CPP code
 #        types_or:  [c, c++, c#, objective-c, cuda]
 #        language: python
+      - id: cloc
+        name: cloc
+        entry: tools/hooks/cloc.py
+        description: Code lines counter
+        types_or:  [c, c++, c#, objective-c, cuda, python, bash]
+        language: python
       - id: cccc
         name: cccc
         entry: tools/hooks/cccc.py
