--- a/knp/.pylintrc
+++ b/knp/.pylintrc
@@ -68,6 +68,7 @@ disable=C0111, # Missing module docstring (Any comments should be deleted on PRO
         C0328,  # unexpected-line-ending-format
         W3101,  # missing-timeout
         W0201,  # attribute-defined-outside-init
+        R0903,  # Too few public methods
 
 # Enable the message, report, category or checker with the given id(s). You can
 # either give multiple identifier separated by comma (,) or put this option
@@ -424,7 +425,7 @@ valid-metaclass-classmethod-first-arg=cls
 max-args=5
 
 # Maximum number of attributes for a class (see R0902).
-max-attributes=7
+max-attributes=9
 
 # Maximum number of boolean expressions in an if statement.
 max-bool-expr=5
