--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,3 +20,5 @@ include_directories(${THIRD_PARTY_INCLUDES})
 add_third_party(googletest)
 add_third_party(spdlog)
 add_third_party(pybind11)
+
+add_subdirectory(knp)
