--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -44,7 +44,7 @@ repos:
     rev: "v1.3.5"
     hooks:
       - id: clang-format
-        args: ["--style=file"]
+        args: ["--style=file", "-i"]
       - id: clang-tidy
         args: ["--config-file=knp/.clang-tidy"]
       # - id: oclint
