--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -46,7 +46,7 @@ repos:
       - id: clang-format
         args: ["--style=file", "-i"]
       - id: clang-tidy
-        args: ["--config-file=knp/.clang-tidy"]
+        args: ["--config-file=knp/.clang-tidy", "-p=build"]
       # - id: oclint
       # - id: uncrustify
       - id: cppcheck
