Trying to add code coverage

--- a/knp/tests/CMakeLists.txt
+++ b/knp/tests/CMakeLists.txt
@@ -6,13 +6,21 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 project(knp-tester CXX)
 
+option(ENABLE_COVERAGE "Coverage enabled" ON)
+
+
 if(NOT BUILD_TESTS)
     message(STATUS "Tests building disabled...")
     return()
 endif()
 
-include(GoogleTest)
+if(ENABLE_COVERAGE)
+    include(codecoverage)
+    append_coverage_compiler_flags()
+endif()
+
 enable_testing()
+include(GoogleTest)
 
 file(GLOB COMMON_SOURCE
      "${CMAKE_CURRENT_LIST_DIR}/common/*.cpp"
@@ -56,12 +64,40 @@ if(${BUILD_GMOCK})
     target_link_libraries("${PROJECT_NAME}" PRIVATE gmock gmock_main)
 endif()
 
-include(codecoverage)
-
-
-
 gtest_discover_tests("${PROJECT_NAME}"
     # Set a working directory to find test data via paths relative to the project root
     WORKING_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/data"
     PROPERTIES VS_DEBUGGER_WORKING_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/data"
 )
+
+if(ENABLE_COVERAGE)
+    message(STATUS "Coverage enabled")
+
+    if(GCOVR_PATH)
+        setup_target_for_coverage_gcovr_xml(
+            NAME ctest_coverage
+            EXECUTABLE ctest -j ${PROCESSOR_COUNT}
+            DEPENDENCIES "${PROJECT_NAME}"
+            BASE_DIRECTORY "${CMAKE_SOURCE_DIR}"
+        )
+        message(VERBOSE "Gcovr selected")
+    elseif(LCOV_PATH)
+        setup_target_for_coverage_lcov(
+            NAME ctest_coverage
+            EXECUTABLE ctest -j ${PROCESSOR_COUNT}
+            DEPENDENCIES "${PROJECT_NAME}"
+            BASE_DIRECTORY "${CMAKE_SOURCE_DIR}"
+        )
+        message(VERBOSE "Lcov selected")
+    elseif(GCOV_PATH)
+        setup_target_for_coverage_gcov_json(
+            NAME ctest_coverage
+            EXECUTABLE ctest -j ${PROCESSOR_COUNT}
+            DEPENDENCIES "${PROJECT_NAME}"
+            BASE_DIRECTORY "${CMAKE_SOURCE_DIR}"
+        )
+        message(STATUS "Gcov selected")
+    else()
+        message(FATAL_ERROR "Coverage can't be enabled!")
+    endif()
+endif()
