--- a/knp/tests/CMakeLists.txt
+++ b/knp/tests/CMakeLists.txt
@@ -101,3 +101,10 @@ if(ENABLE_COVERAGE)
         message(FATAL_ERROR "Coverage can't be enabled!")
     endif()
 endif()
+
+
+add_custom_target(test_memcheck
+    COMMAND ${CMAKE_CTEST_COMMAND}
+        --force-new-ctest-process --test-action memcheck
+    COMMAND cat "${CMAKE_BINARY_DIR}/Testing/Temporary/MemoryChecker.*.log"
+    WORKING_DIRECTORY "${CMAKE_BINARY_DIR}")
