--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -198,7 +198,7 @@ repos:
     rev: v0.991
     hooks:
       - id: mypy
-        args: [--no-strict-optional, --ignore-missing-imports]
+        args: ["--config-file", "knp/.mypy.ini", "--install-types"]
         additional_dependencies:
           [
             "isort>=5",
@@ -207,6 +207,8 @@ repos:
             "tokenize-rt==3.2.0",
             "tomlkit>=0.10.1",
             "types-pkg_resources==0.1.3",
+            "types-all",
+            "types-requests",
             "types-dataclasses >= 0.1.3",
             "types-PyYAML",
             "types-typed-ast >= 1.4.1"
