--- a/knp/core-library/CMakeLists.txt
+++ b/knp/core-library/CMakeLists.txt
@@ -24,7 +24,7 @@ target_include_directories("${PROJECT_NAME}" PUBLIC
     "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>"
     "$<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>")
 
-add_clang_tidy("${PROJECT_NAME}" "${CMAKE_TIDY_CONFIG}" "--fix-notes;--fix")
+add_clang_tidy("${PROJECT_NAME}" "${CMAKE_TIDY_CONFIG}" "")
 
 install(TARGETS "${PROJECT_NAME}"
         EXPORT "${PROJECT_NAME}"
