Population, UID, projection headers added

--- a/knp/core-library/CMakeLists.txt
+++ b/knp/core-library/CMakeLists.txt
@@ -19,12 +19,16 @@ if(ENABLE_COVERAGE)
     append_coverage_compiler_flags()
 endif()
 
-add_library("${PROJECT_NAME}" impl/backend.cpp)
+add_library("${PROJECT_NAME}"
+    impl/backend.cpp
+    impl/uid.cpp
+)
+
 target_include_directories("${PROJECT_NAME}" PUBLIC
     "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>"
     "$<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>")
 
-add_clang_tidy("${PROJECT_NAME}" "${CMAKE_TIDY_CONFIG}" "")
+add_clang_tidy("${PROJECT_NAME}" CONFIG_FILE_PATH "${CMAKE_TIDY_CONFIG}" EXTRA_ARGS "--use-color")
 
 install(TARGETS "${PROJECT_NAME}"
         EXPORT "${PROJECT_NAME}"
