--- a/CPPLINT.cfg
+++ b/CPPLINT.cfg
@@ -8,4 +8,6 @@ root=knp
 #   NOLINT is used by clang-tidy.
 # - Don't check TODO format.
 #   // TODO(my_username): Stuff.
-filter=-whitespace/indent,-readability/nolint,-readability/todo
+# - Don't check includes subdirectories.
+#   Allow includes like "common.h".
+filter=-whitespace/indent,-readability/nolint,-readability/todo,-build/include_subdir
