--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ clang-tidy==14.0.6
 gcovr==5.2
 # black==19.10b0
 pre-commit==2.20.0
+pylint==2.14.5
 pytest==5.4.1
 requests==2.23.0
 types-requests==2.28.11.7
