--- a/knp/neuron-traits-library/CMakeLists.txt
+++ b/knp/neuron-traits-library/CMakeLists.txt
@@ -5,3 +5,6 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 project(neuron_traits_library LANGUAGES C CXX)
+target_include_directories("${PROJECT_NAME}" PUBLIC
+        "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>"
+        "$<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>")
