CPU backend directory added

--- a/knp/CMakeLists.txt
+++ b/knp/CMakeLists.txt
@@ -13,6 +13,7 @@ set(Boost_USE_STATIC_LIBS ON)
 add_subdirectory(neuron-traits-library)
 add_subdirectory(synapse-traits-library)
 add_subdirectory(core-library)
+add_subdirectory(backends)
 add_subdirectory(base-framework)
 add_subdirectory(python-framework)
 add_subdirectory(tests)
