--- a/knp/neuron-traits-library/CMakeLists.txt
+++ b/knp/neuron-traits-library/CMakeLists.txt
@@ -4,7 +4,7 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
-project(neuron_traits LANGUAGES C CXX)
+project(knp-neuron-traits LANGUAGES C CXX)
 
 add_library("${PROJECT_NAME}" INTERFACE)
 add_library(KNP::neuron_traits ALIAS "${PROJECT_NAME}")
