--- a/knp/backends/cpu-single-threaded-backend/CMakeLists.txt
+++ b/knp/backends/cpu-single-threaded-backend/CMakeLists.txt
@@ -6,4 +6,18 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 # Need for the linters.
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
-project(cpu-single-threaded-backend VERSION "${KNP_VERSION}" LANGUAGES C CXX)
+project(knp-cpu-single-threaded-backend VERSION "${KNP_VERSION}" LANGUAGES C CXX)
+
+include(GNUInstallDirs)
+include(clang-tidy)
+
+source_group(source REGULAR_EXPRESSION "impl/.*")
+source_group(headers REGULAR_EXPRESSION "include/.*")
+
+add_library("${PROJECT_NAME}"
+    impl/device.cpp
+)
+
+add_library(KNP::Core::Backend::CPUSingleThreaded ALIAS "${PROJECT_NAME}")
+
+target_link_libraries("${PROJECT_NAME}" PUBLIC knp-core)
