--- a/knp/base-framework/CMakeLists.txt
+++ b/knp/base-framework/CMakeLists.txt
@@ -4,4 +4,8 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
-project(base-framework LANGUAGES C CXX)
+project(knp-base-framework LANGUAGES C CXX)
+
+
+#target_link_libraries("${PROJECT_NAME}" PUBLIC neuron_traits)
+#target_link_libraries("${PROJECT_NAME}" PUBLIC synapse_traits)
