--- a/knp/synapse-traits-library/CMakeLists.txt
+++ b/knp/synapse-traits-library/CMakeLists.txt
@@ -4,7 +4,7 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
-project(synapse_traits LANGUAGES C CXX)
+project(knp-synapse-traits LANGUAGES C CXX)
 add_library("${PROJECT_NAME}" INTERFACE include/knp/synapse-traits/delta.h)
 add_library(KNP::synapse_traits ALIAS "${PROJECT_NAME}")
 target_include_directories("${PROJECT_NAME}" INTERFACE
