Doxygen config fixed

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,6 @@ cmake_minimum_required(VERSION 3.22) # TODO: increase to 3.25
 
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")
 
-include("doxygen")
 include("print_variables")
 include("third-party")
 include("version")
@@ -37,6 +36,7 @@ add_third_party(pybind11)
 add_subdirectory(knp)
 
 if(KNP_BUILD_DOCUMENTATION)
+    include("doxygen")
     foreach(_i
             core-library base-framework
             neuron-traits-library synapse-traits-library
@@ -51,6 +51,8 @@ if(KNP_BUILD_DOCUMENTATION)
         INPUT "${CMAKE_CURRENT_SOURCE_DIR}/knp"
         EXAMPLE_PATH "knp/tests"
         LOGO "${CMAKE_CURRENT_SOURCE_DIR}/knp/knp-logo.png"
+        BUNDLE_ID "com.kaspersky.KNP"
+        PUBLISHER_NAME "Kaspersky Lab"
         EXCLUDE_PATTERNS "knp/tests;knp/.descr"
         STRIP_FROM_INC_PATH "${_strip_list}"
     )
