--- a/knp/Doxyfile.in
+++ b/knp/Doxyfile.in
@@ -1424,8 +1424,7 @@ DOCSET_FEEDNAME        = "Doxygen generated docs"
 # The default value is: org.doxygen.Project.
 # This tag requires that the tag GENERATE_DOCSET is set to YES.
 
-# KOS Specific.
-DOCSET_BUNDLE_ID       = com.kaspersky.OS
+DOCSET_BUNDLE_ID       = @DOXYGEN_BUNDLE_ID@
 
 # The DOCSET_PUBLISHER_ID tag specifies a string that should uniquely identify
 # the documentation publisher. This should be a reverse domain-name style
@@ -1433,14 +1432,13 @@ DOCSET_BUNDLE_ID       = com.kaspersky.OS
 # The default value is: org.doxygen.Publisher.
 # This tag requires that the tag GENERATE_DOCSET is set to YES.
 
-# KOS Specific.
-DOCSET_PUBLISHER_ID    = com.kaspersky.OS.documentation
+DOCSET_PUBLISHER_ID    = @DOXYGEN_BUNDLE_ID@.documentation
 
 # The DOCSET_PUBLISHER_NAME tag identifies the documentation publisher.
 # The default value is: Publisher.
 # This tag requires that the tag GENERATE_DOCSET is set to YES.
 
-DOCSET_PUBLISHER_NAME  = "Kaspersky Lab"
+DOCSET_PUBLISHER_NAME  = "@DOXYGEN_PUBLISHER_NAME@"
 
 # If the GENERATE_HTMLHELP tag is set to YES then doxygen generates three
 # additional HTML index files: index.hhp, index.hhc, and index.hhk. The
