--- a/knp/autodoc/Doxyfile.in
+++ b/knp/autodoc/Doxyfile.in
@@ -17,6 +17,12 @@
 # Project related configuration options
 #---------------------------------------------------------------------------
 
+# Enable multithreading
+# 0 - use all cores
+
+NUM_PROC_THREADS  = 0
+DOT_NUM_THREADS = 0
+
 # This tag specifies the encoding used for all characters in the config file
 # that follow. The default is UTF-8 which is also the encoding used for all text
 # before the first occurrence of this tag. Doxygen uses libiconv (or the iconv
@@ -51,7 +57,7 @@ PROJECT_BRIEF          = "@DOXYGEN_PROJECT_BRIEF@"
 # pixels and the maximum width should not exceed 200 pixels. Doxygen will copy
 # the logo to the output directory.
 
-PROJECT_LOGO           = @DOXYGEN_LOGO@
+PROJECT_LOGO           = @DOXYGEN_PROJECT_LOGO@
 
 # The OUTPUT_DIRECTORY tag is used to specify the (relative or absolute) path
 # into which the generated documentation will be written. If a relative path is
@@ -959,30 +965,7 @@ INPUT_ENCODING         = UTF-8
 # *.m, *.markdown, *.md, *.mm, *.dox, *.py, *.pyw, *.f90, *.f95, *.f03, *.f08,
 # *.f, *.for, *.tcl, *.vhd, *.vhdl, *.ucf and *.qsf.
 
-FILE_PATTERNS          = *.c \
-                         *.cc \
-                         *.cxx \
-                         *.cpp \
-                         *.c++ \
-                         *.ii \
-                         *.ixx \
-                         *.ipp \
-                         *.i++ \
-                         *.inl \
-                         *.idl \
-                         *.ddl \
-                         *.odl \
-                         *.h \
-                         *.hh \
-                         *.hxx \
-                         *.hpp \
-                         *.h++ \
-                         *.inc \
-                         *.m \
-                         *.markdown \
-                         *.md \
-                         *.mm \
-                         *.dox
+FILE_PATTERNS          = *
 
 # The RECURSIVE tag can be used to specify whether or not subdirectories should
 # be searched for input files as well.
@@ -1119,7 +1102,7 @@ USE_MDFILE_AS_MAINPAGE =
 # also VERBATIM_HEADERS is set to NO.
 # The default value is: NO.
 
-SOURCE_BROWSER         = NO
+SOURCE_BROWSER         = @DOXYGEN_SOURCE_BROWSER@
 
 # Setting the INLINE_SOURCES tag to YES will include the body of functions,
 # classes and enums directly into the documentation.
@@ -1192,7 +1175,7 @@ USE_HTAGS              = NO
 # See also: Section \class.
 # The default value is: YES.
 
-VERBATIM_HEADERS       = YES
+VERBATIM_HEADERS       = @DOXYGEN_VERBATIM_HEADERS@
 
 # If the CLANG_ASSISTED_PARSING tag is set to YES then doxygen will use the
 # clang parser (see: http://clang.llvm.org/) for more accurate parsing at the
@@ -1281,9 +1264,7 @@ HTML_FILE_EXTENSION    = .html
 # of the possible markers and block names see the documentation.
 # This tag requires that the tag GENERATE_HTML is set to YES.
 
-# KOS Specific.
-# HTML_HEADER            = /opt/KasperskyOS-SDK-Toolchain-002-1.0/styles/header.html
-HTML_HEADER            =
+HTML_HEADER            = @DOXYGEN_SRCDIR@/header.html.in
 
 # The HTML_FOOTER tag can be used to specify a user-defined HTML footer for each
 # generated HTML page. If the tag is left blank doxygen will generate a standard
@@ -1293,9 +1274,7 @@ HTML_HEADER            =
 # that doxygen normally uses.
 # This tag requires that the tag GENERATE_HTML is set to YES.
 
-# KOS Specific.
-# HTML_FOOTER            = /opt/KasperskyOS-SDK-Toolchain-002-1.0/styles/footer.html
-HTML_FOOTER            =
+HTML_FOOTER            = @DOXYGEN_SRCDIR@/footer.html
 
 # The HTML_STYLESHEET tag can be used to specify a user-defined cascading style
 # sheet that is used by each HTML page. It can be used to fine-tune the look of
@@ -1320,9 +1299,7 @@ HTML_STYLESHEET        =
 # list). For an example see the documentation.
 # This tag requires that the tag GENERATE_HTML is set to YES.
 
-# KOS Specific.
-# HTML_EXTRA_STYLESHEET  = /opt/KasperskyOS-SDK-Toolchain-002-1.0/styles/styles.css
-HTML_EXTRA_STYLESHEET  =
+HTML_EXTRA_STYLESHEET  = @DOXYGEN_SRCDIR@/styles/styles.css
 
 # The HTML_EXTRA_FILES tag can be used to specify one or more extra images or
 # other source files which should be copied to the HTML output directory. Note
@@ -1332,9 +1309,13 @@ HTML_EXTRA_STYLESHEET  =
 # files will be copied as-is; there are no commands or markers available.
 # This tag requires that the tag GENERATE_HTML is set to YES.
 
-# KOS Specific.
-# HTML_EXTRA_FILES       =     @DOXYGEN_HTML_EXTRA_FILES@     /opt/KasperskyOS-SDK-Toolchain-002-1.0/styles/fonts/exljbris---MuseoSansCyrl-300Italic.otf     /opt/KasperskyOS-SDK-Toolchain-002-1.0/styles/fonts/exljbris---MuseoSansCyrl-300.otf     /opt/KasperskyOS-SDK-Toolchain-002-1.0/styles/fonts/exljbris---MuseoSansCyrl-500Italic.otf     /opt/KasperskyOS-SDK-Toolchain-002-1.0/styles/fonts/exljbris---MuseoSansCyrl-500.otf     /opt/KasperskyOS-SDK-Toolchain-002-1.0/styles/fonts/exljbris---MuseoSansCyrl-700.otf     /opt/KasperskyOS-SDK-Toolchain-002-1.0/styles/fonts/museo-sans.css
-HTML_EXTRA_FILES       = @DOXYGEN_HTML_EXTRA_FILES@
+HTML_EXTRA_FILES       = @DOXYGEN_HTML_EXTRA_FILES@ \
+    @DOXYGEN_SRCDIR@/fonts/exljbris---MuseoSansCyrl-300Italic.otf \
+    @DOXYGEN_SRCDIR@/fonts/exljbris---MuseoSansCyrl-300.otf \
+    @DOXYGEN_SRCDIR@/fonts/exljbris---MuseoSansCyrl-500Italic.otf \
+    @DOXYGEN_SRCDIR@/fonts/exljbris---MuseoSansCyrl-500.otf \
+    @DOXYGEN_SRCDIR@/fonts/exljbris---MuseoSansCyrl-700.otf \
+    @DOXYGEN_SRCDIR@/fonts/museo-sans.css
 
 # The HTML_COLORSTYLE_HUE tag controls the color of the HTML output. Doxygen
 # will adjust the colors in the style sheet and background images according to
@@ -1610,7 +1591,7 @@ DISABLE_INDEX          = NO
 # The default value is: NO.
 # This tag requires that the tag GENERATE_HTML is set to YES.
 
-GENERATE_TREEVIEW      = YES
+GENERATE_TREEVIEW      = NO
 
 # The ENUM_VALUES_PER_LINE tag can be used to set the number of enum values that
 # doxygen will group on one line in the generated HTML documentation.
