--- a/knp/tests/CMakeLists.txt
+++ b/knp/tests/CMakeLists.txt
@@ -26,7 +26,7 @@ file(GLOB COMMON_SOURCE
      "${CMAKE_CURRENT_LIST_DIR}/common/*.cpp"
      "${CMAKE_CURRENT_LIST_DIR}/common/*.h")
 
-add_executable("${PROJECT_NAME}" tester.cpp ${COMMON_SOURCE})
+add_executable("${PROJECT_NAME}" tester.cpp ${COMMON_SOURCE} common/projection_tests.cpp)
 
 
 #file(GLOB BACKENDS LIST_DIRECTORIES yes "${CMAKE_CURRENT_SOURCE_DIR}/../include/snn-library/backends/*")
