Population logic implemented

--- a/CPPLINT.cfg
+++ b/CPPLINT.cfg
@@ -10,4 +10,6 @@ root=knp
 #   // TODO(my_username): Stuff.
 # - Don't check includes subdirectories.
 #   Allow includes like "common.h".
-filter=-whitespace/indent,-readability/nolint,-readability/todo,-build/include_subdir
+# - Sometimes non-const references more preferable than pointers.
+#  Is this a non-const reference? If so, make const or use a pointer: PopulationType &population.
+filter=-whitespace/indent,-readability/nolint,-readability/todo,-build/include_subdir,-runtime/references
