Devices library build fix

--- a/knp/backends/cpu-single-threaded-backend/CMakeLists.txt
+++ b/knp/backends/cpu-single-threaded-backend/CMakeLists.txt
@@ -24,4 +24,4 @@ target_include_directories("${PROJECT_NAME}" PUBLIC
         "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>"
         "$<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>")
 
-target_link_libraries("${PROJECT_NAME}" PUBLIC knp-core)
+target_link_libraries("${PROJECT_NAME}" PUBLIC knp-core KNP::Devices::CPU)
