--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "third-party/pybind11"]
 	path = third-party/pybind11
 	url = https://github.com/pybind/pybind11
+[submodule "third-party/pcm"]
+	path = third-party/pcm
+	url = https://github.com/intel/pcm
