--- a/CPPLINT.cfg
+++ b/CPPLINT.cfg
@@ -12,4 +12,6 @@ root=knp
 #   Allow includes like "common.h".
 # - Sometimes non-const references more preferable than pointers.
 #  Is this a non-const reference? If so, make const or use a pointer: PopulationType &population.
-filter=-whitespace/indent,-readability/nolint,-readability/todo,-build/include_subdir,-runtime/references
+# - build/c++11 - don't check headers blacklisted by Google.
+#  Chromium team uses own headers instead of standard.
+filter=-whitespace/indent,-readability/nolint,-readability/todo,-build/include_subdir,-runtime/references,-build/c++11
