--- a/knp/core-library/CMakeLists.txt
+++ b/knp/core-library/CMakeLists.txt
@@ -30,8 +30,8 @@ target_include_directories("${PROJECT_NAME}" PUBLIC
 
 target_include_directories("${PROJECT_NAME}" PRIVATE ${Boost_INCLUDE_DIRS})
 
-target_link_libraries("${PROJECT_NAME}" PUBLIC knp-neuron-traits)
-target_link_libraries("${PROJECT_NAME}" PUBLIC knp-synapse-traits)
+target_link_libraries("${PROJECT_NAME}" PUBLIC spdlog::spdlog_header_only)
+target_link_libraries("${PROJECT_NAME}" PUBLIC knp-neuron-traits knp-synapse-traits)
 
 #add_clang_tidy("${PROJECT_NAME}" CONFIG_FILE_PATH "${CMAKE_TIDY_CONFIG}" EXTRA_ARGS "--use-color")
 
