--- a/knp/backends/cpu-single-threaded-backend/CMakeLists.txt
+++ b/knp/backends/cpu-single-threaded-backend/CMakeLists.txt
@@ -21,7 +21,8 @@ add_library("${PROJECT_NAME}"
 add_library(KNP::Core::Backend::CPUSingleThreaded ALIAS "${PROJECT_NAME}")
 
 target_include_directories("${PROJECT_NAME}" PUBLIC
-        "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>"
-        "$<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>")
+    "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>"
+    "$<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>")
 
+target_link_libraries("${PROJECT_NAME}" PUBLIC spdlog::spdlog_header_only)
 target_link_libraries("${PROJECT_NAME}" PUBLIC knp-core KNP::Devices::CPU)
